# host-migrate-kit-

./: .gitignore  BATTLE_TEST_REPORT_2026-05-13.md  MVP_STATUS.md  MVP_SUMMARY_2026-05-13.md  NEXT_STEPS.md  QUICKSTART.md  README.md  ROADMAP.md  TODO_2026-05-14.md  TZ.md  pyproject.toml
docs/: INDEX.md  adr-runtime-bootstrap.md
src/host_migrate_kit/: applyplan.py  apps.py  bundle.py  classification.py  command.py  compat.py  gapcheck.py  manifest.py  policy.py  preflight.py  report.py  restore.py  schema.py  servicemap.py  staging.py  sufficiency.py  systemdstate.py  verify.py
src/host_migrate_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/host_migrate_kit/collectors/: host.py  paths.py  runtime.py  system.py
