[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "host-migrate-kit"
version = "0.1.0"
description = "Инструмент аудита и inventory для переносимости Debian-oriented VPS"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Pavel" }
]

[project.scripts]
hmk = "host_migrate_kit.command:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
